--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -229,7 +229,7 @@ OPTnote = {•},
 OPTannote = {•}
 }
 
-@Article{{Arato2003,
+@Article{Arato2003,
 author={Arato P., Juhasz S., Mann Z.A., Orban A., Papp D.},
 title={Hardware/software partitioning in embedded system design},
 journal = {•},
