--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -244,7 +244,7 @@ OPTannote = {•}
 }
 
 @article{Mann2007,
-author={Mann Z.A. , Orban A. and Arato P.,},
+author={Mann Z.A., Orban A., Arato P.},
 title={Finding optimal hardware/software partitions},
 journal={Formal Methods in System Design},
 volume={31},
@@ -343,7 +343,7 @@ note= {•},
 }
 
 @article{Rao2009,
-author={Rao S.},
+author={Singiresu S. Rao},
 title={Engineering Optimization: Theory and Practice. 4th edition},
 journal= {•},
 volume= {•},
