--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -244,13 +244,13 @@ OPTannote = {•}
 }
 
 @article{Mann2007,
-author={Mann Z.A., Orban A., Arato P.},
+author={Mann Z., Orban A., Arato P.},
 title={Finding optimal hardware/software partitions},
 journal={Formal Methods in System Design},
 volume={31},
 number= {•},
 OPTmonth = {•},
-year= {•},
+year= {2007},
 pages={241-263},
 doi= { },
 url= {•},
@@ -315,7 +315,7 @@ note= {•},
 }
 
 @article{OpenMP1998,
-author={Open MP},
+author={Matthias S. M\"{u}ller},
 title={OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 1.0},
 journal={Proc. of the Intl. Conf. on Computer Science Education},
 year = {1998},
@@ -343,7 +343,7 @@ note= {•},
 }
 
 @article{Rao2009,
-author={Singiresu S. Rao},
+author={Singiresu Rao},
 title={Engineering Optimization: Theory and Practice. 4th edition},
 journal= {•},
 volume= {•},
@@ -485,7 +485,7 @@ note= {•},
 }
 
 @article{Dutertre2014,
-author={Dutertre B.},
+author={Bruno Dutertre},
 title={Yices 2.2},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 volume= {•},
@@ -513,7 +513,7 @@ note= {•},
 }
 
 @article{Bjorner2014,
-author={Bjorner N. and Phan D.},
+author={Bjorner N., Phan D.},
 title={vZ - Maximal Satisfaction with Z3},
 journal={Proc. of the Intl. Symp. on Symbolic Computation in Software Science},
 volume= {•},
@@ -685,11 +685,11 @@ note= {•},
 }
 
 @article{Teich2012,
-author={Teich J.},
+author={J\"{u}rgen Teich},
 title={Hardware/Software Codesign: The Past, the Present, and Predicting the Future},
 journal={Proc. of the IEEE, Special Centennial Issue},
 volume={100},
-number={2012},
+year={2012},
 OPTmonth = {•},
 year= {•},
 pages={1411--1430},
