--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -232,15 +232,9 @@ OPTannote = {•}
 @Article{Arato2003,
 author={Arato P., Juhasz S., Mann Z.A., Orban A., Papp D.},
 title={Hardware/software partitioning in embedded system design},
-journal = {•},
+journal = {Intl. Symp. on Intelligent Signal Processing},
 year = {2003},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTpages = {192--202},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+pages = {192--202},
 }
 
 @article{Mann2007,
@@ -248,41 +242,27 @@ author={Mann Z., Orban A., Arato P.},
 title={Finding optimal hardware/software partitions},
 journal={Formal Methods in System Design},
 volume={31},
-number= {•},
-OPTmonth = {•},
+number= {3},
 year= {2007},
 pages={241-263},
-doi= { },
-url= {•},
-note= {•},
 }
 
 @article{Trindade2015,
 author={Trindade A., Cordeiro L.},
 title={Applying SMT-based verification to hardware/software partitioning in embedded systems},
 journal={ Design Automation for Embedded Systems (to appear)},
-volume= {•},
-number= {•},
-OPTmonth = {•},
+volume= {},
+number= {},
 year={2015},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
+pages= {},
+note= {},
 }
 
 @article{Trindade2016,
 author={Trindade A., Ismail H. , Cordeiro L.},
 title={Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)},
 journal={To appear in V Brazilian Symposium on Computing Systems Engineering (SBESC)},
-year = {2016},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTpages = {1--4},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+year = {2015},
 }
 
 
@@ -290,28 +270,18 @@ OPTannote = {•}
 author={Bjorner N., Phan A-D., Fleckenstein,L. },
 title={vZ - An Optimizing SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
-volume= {•},
-number= {•},
-OPTmonth = {•},
+volume= {9035},
+number= {},
 year={2015},
 pages={194--199},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Tang2009,
 author={Tang T., Lin Y., Ren X.},
 title={Mapping OpenMP concepts to the stream programming model},
 journal={ Proc. of the Intl. Conf. on Computer Science Education},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2010},
 pages={1900--1905},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{OpenMP1998,
@@ -319,13 +289,6 @@ author={Matthias S. M\"{u}ller},
 title={OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 1.0},
 journal={Proc. of the Intl. Conf. on Computer Science Education},
 year = {1998},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTpages = {•},
-OPTmonth = {•},
-OPTnote = {www.openmp.org},
-OPTannote = {•}
 }
 
 @article{Cordeiro2012,
@@ -334,40 +297,22 @@ title={SMT-based Bounded Model Checking for Embedded ANSI-C Software},
 journal={IEEE Transactions on Software Engineering},
 volume={38},
 number={4},
-OPTmonth = {•},
 year={2012},
 pages={957--974},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Rao2009,
 author={Singiresu Rao},
 title={Engineering Optimization: Theory and Practice. 4th edition},
-journal= {•},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2009},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Biere2009,
 author={Biere A.},
 title={Bounded Model Checking.},
 journal={Handbook of Satisfiability},
-year = {•},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTpages = {•},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+publisher={IOS Press},
+year = {2009},
 }
 
 
@@ -377,12 +322,8 @@ title={Bounded model checking using satisfiability solving},
 journal={ Formal Methods in System Design},
 volume={19},
 number={1},
-OPTmonth = {•},
 year={2001},
 pages={7--34},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Armando2009,
@@ -391,83 +332,49 @@ title={Bounded model checking of software using SMT solvers instead of SAT solve
 journal={Intl. Journal on Software Tools for Technology Transfer},
 volume={11},
 number={1},
-OPTmonth = {•},
 year={2009},
 pages={69--83},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Ganai2006,
 author={Ganai M., Gupta A.},
 title={Accelerating high-level bounded model checking},
 journal={Proc. of the IEEE/ACM Intl. Conf. on Computer-Aided Design},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2006},
 pages={794-–801},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Ramalho2013,
 author={Ramalho M., Freitas M., Souza F., Marques H., Cordeiro L.},
 title={SMT-Based Bounded Model Checking of C++ Programs.},
 journal={Intl. Conf. and Workshops on the Engineering of Computer-Based Systems},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2013},
 pages={147--156},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{DeMoura2008,
 author={De Moura L., Bjorner N.},
 title={Z3: An Efficient SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2008},
 pages={337–-340},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Brummayer2009,
 author={Brummayer R., Biere A.},
 title={Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays.},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2009},
 pages={174-–177},
-doi= {•},
-url= {•},
-note= {•},
-
 }
 
 @article{Barrett2011,
 author={Barrett C., Conway C. Deters M., Hadarean L., Jovanovic D., King T., Reynolds A., Tinelli C.},
 title={Proc. of the Intl. Conf. on Computer-Aided Verification},
 journal={CVC4},
-volume= {•},
-number= {•},
-OPTmonth = {•},
+volume={6806},
 year={2011},
 pages={171--177},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Bozzano2005,
@@ -476,124 +383,70 @@ title={MathSAT: Tight integration of SAT and mathematical decision procedures},
 journal={Journal of Automated Reasoning},
 volume={35},
 number={1-3},
-OPTmonth = {•},
 year={2005},
 pages={265--293},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Dutertre2014,
 author={Bruno Dutertre},
 title={Yices 2.2},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
-volume= {•},
-number= {•},
-OPTmonth = {•},
+volume= {8559},
 year={2014},
 pages={737–-744},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Wu2014,
 author={Wu M., Wu W., Tai N., Zhao H., Fan J., Yuan N.},
 title={Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP},
 journal={Proc. of the Intl. Conf. on Software Engineering and Service Science},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2014},
 pages={921--924},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Bjorner2014,
 author={Bjorner N., Phan D.},
 title={vZ - Maximal Satisfaction with Z3},
 journal={Proc. of the Intl. Symp. on Symbolic Computation in Software Science},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2014},
 pages={1--10},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Federica2008,
 author={Federica P., Rodolfo F., Yuqing S., Elisa B.},
 title={Authorization and User Failure Resiliency for WS-BPEL business processes},
 journal={Proc. of the Intl. Conf. on Service-Oriented Computing},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2008},
 pages={116--131},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{NarodytskaN,
 author={Narodytska N., Bacchus F.},
 title={Maximum Satisfiability Using Core-Guided MAXSAT Resolution},
-journal={Proc. of the AAAI Conf. on Artificial Intelligence},
-volume= {•},
-number= {•},
-OPTmonth = {•},
+journal={Proc. of the Conf. on Artificial Intelligence},
 year={2014},
 pages={2717--2723},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Barth1995,
 author={Barth P., Davis-Putnam A.},
 title={Enumeration Algorithm for Linear Pseudo-Boolean Optimization.},
 journal={Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={1995},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Vasco2005,
 author={Vasco M., Marques-Silva J.},
 title={Effective Lower Bounding Techniques for Pseudo-Boolean Optimization},
 journal={IST/INESC-ID, Technical University of Lisbon, Portugal},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2005},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Z3API,
 author={Magellan},
 title={Z3 API - Source code and documentation},
 journal={Accessed 18th August 2015},
-volume= {•},
-number= {•},
-OPTmonth = {•},
-year= {•},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
+year={2015}
 }
 
 @article{Cormem,
@@ -601,13 +454,8 @@ author={Cormen T., Leiserson C., Rivest R., Stein C.},
 title={Introduction to Algorithms},
 journal={MIT Press},
 volume={I-XIX},
-number= {•},
-OPTmonth = {•},
 year={2009},
 pages={1--1292},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Dagum1998,
@@ -616,27 +464,15 @@ title={OpenMP: An Industry-Standard API for Shared-Memory Programming.},
 journal={Proc. of the Intl. Conf. on Computational Science Engineering},
 volume={5},
 number={1},
-OPTmonth = {•},
 year={1998},
 pages={46--55},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
 @article{TheMathWorks2013,
 author={The MathWorks, Inc.},
 title={MATLAB (version R2013a)},
-journal= {•},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2013},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -644,14 +480,7 @@ note= {•},
 author={Tranquillo J. },
 title={Matlab for Engineering and the Life Sciences},
 journal={Synthesis Lectures on Engineering. Morgan Claypool},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2011},
-pages= {•},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -659,14 +488,8 @@ note= {•},
 author={Hong L., Cai J.},
 title={The application guide of mixed programming between MATLAB and other programming languages},
 journal={Proc. of the Intl. Conf. on Computer and Automation Engineering},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2010},
 pages={185--189},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -674,14 +497,8 @@ note= {•},
 author={Cordeiro L., Fischer B.},
 title={Verifying multi-threaded software using SMT-based context-bounded model checking.},
 journal={Proc. of the Intl. Conf. on Software Engineering},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2011},
 pages={331--340},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Teich2012,
@@ -690,12 +507,7 @@ title={Hardware/Software Codesign: The Past, the Present, and Predicting the Fut
 journal={Proc. of the IEEE, Special Centennial Issue},
 volume={100},
 year={2012},
-OPTmonth = {•},
-year= {•},
 pages={1411--1430},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -703,14 +515,8 @@ note= {•},
 author={Guthaus M., Ringenberg J., Ernst D., Austin T., Mudge T., Brown R. },
 title={MiBench: a free, commercially representative embedded benchmark suite},
 journal={Proc. of the annual workshop on workload characterization},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2001},
 pages={3--14},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -719,13 +525,8 @@ author={Arato P., Mann Z.A., Orban A.},
 title={Algorithmic aspects of hardware/software partitioning.},
 journal={Transactions on Design Automation of Electronic Systems},
 volume={1},
-number= {•},
-OPTmonth = {•},
 year={2005},
 pages={136–-156},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -735,12 +536,8 @@ title={Swarm Verification Techniques},
 journal={IEEE Transactions on Software Engineering},
 volume={37},
 number={6},
-OPTmonth = {•},
 year={2011},
 pages={845--857},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -748,14 +545,8 @@ note= {•},
 author={Holzmann G.},
 title={Parallelizing the spin model checker.},
 journal={Proc. of the Intl. Symp. on Model Checking Software},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2012},
 pages={155--171},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -763,14 +554,8 @@ note= {•},
 author={Wintersteiger C., Hamadi Y., De Moura L.},
 title={A Concurrent Portfolio Approach to SMT Solving.},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2009},
 pages={715--720},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 
@@ -778,42 +563,24 @@ note= {•},
 author={Qawasmeh A., Malik A., Chapman B.},
 title={OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},
 journal={Proc. of the Intl. Symp. on Parallel Distributed processing},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2014},
 pages={1049--1058},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Pavlinovic2015,
 author={Pavlinovic Z., King T., Wies T.},
 title={Practical SMT-Based Type Error Localization},
 journal={Proc. of the Intl. Conf. on Functional Programming},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2015},
 pages={412--423},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Patrick2015,
 author={Sebastiani R., Trentin T.},
 title={OptiMathSAT: A Tool for Optimization Modulo Theories},
 journal={Proc. of the Intl. Conf. on Computer Aided Verification},
-volume= {•},
-number= {•},
-OPTmonth = {•},
 year={2015},
 pages={447--454},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @article{Holzmann11,
@@ -822,18 +589,13 @@ title={warm Verification Techniques},
 journal={IEEE Trans. Software Eng},
 volume={37},
 number={6},
-OPTmonth = {•},
 year={2011},
 pages={845--857},
-doi= {•},
-url= {•},
-note= {•},
 }
 
 @book{hevc,
 author={ISO/IEC 23008-2},
 title={Information technology -- high efficiency coding and media delivery in heterogeneous environments -- part 2: high efficiency video coding},
 year={2015},
-pages= {•},
 publisher={International Organization for Standardization}
 } 
